--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,10 @@ html {
     width: 300px;
 }
 
+.email-page {
+    justify-items: center;
+}
+
 .logo {
     width: 150px;
     margin-bottom: 48px;
@@ -71,6 +75,33 @@ html {
 .form {
     display: flex;
     flex-direction: column;
+}
+
+.email-image {
+    width: 132px;
+    height: 132px;
+    border-radius: 50%;
+    background-color: var(--text-input-field);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.email-image img {
+    width: 80px;
+}
+
+.resend {
+    font-size: var(--sm);
+}
+
+.resend span {
+    color: var(--very-light-pink);
+}
+
+.resend a {
+    color: var(--hospital-green);
+    text-decoration: none;
 }
 
 .primary-button {
