--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@ html {
 }
 
 .login {
+    position: relative;
     width: 100%;
     height: 100vh;
     display: grid;
@@ -28,6 +29,7 @@ html {
 }
 
 .form-container {
+    
     display: grid;
     grid-template-rows: auto 1fr auto;
     width: 300px;
@@ -72,9 +74,21 @@ html {
     margin-bottom: 12px;
 }
 
+.input-email {
+    margin-bottom: 22px;
+}
+
 .form {
     display: flex;
     flex-direction: column;
+}
+
+.form .forgot {
+    color: var(--hospital-green);
+    font-size: var(--sm);
+    text-align: center;
+    text-decoration: none;
+    margin-bottom: 52px;
 }
 
 .email-image {
@@ -114,6 +128,20 @@ html {
     cursor: pointer;
     font-size: var(--md);
     font-weight: bold;
+}
+
+.secondary-button {
+    position: absolute;
+    background-color: var(--white);
+    border-radius: 8px;
+    border: 2px solid var(--hospital-green);
+    color: var(--hospital-green);
+    width: inherit;
+    height: 50px;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    bottom: 0;
 }
 
 .login-button {
