--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,11 @@ html {
     text-align: center;
 }
 
+.form-container .account {
+    margin-bottom: 22px;
+    text-align: start;
+}
+
 .subtitle {
     color: var(--very-light-pink);
     font-size: var(--md);
@@ -74,11 +79,26 @@ html {
     margin-bottom: 12px;
 }
 
+.input-name,
+.input-password,
 .input-email {
     margin-bottom: 22px;
 }
 
+.account-container {
+    height: 100%;
+}
+
 .form {
+    display: flex;
+    flex-direction: column;
+}
+
+.account-form {
+    justify-content: space-between;
+}
+
+.form div {
     display: flex;
     flex-direction: column;
 }
