--- a/styles/styles.css
+++ b/styles/styles.css
@@ -151,20 +151,31 @@ html {
 }
 
 .secondary-button {
-    position: absolute;
     background-color: var(--white);
     border-radius: 8px;
     border: 2px solid var(--hospital-green);
     color: var(--hospital-green);
-    width: inherit;
     height: 50px;
+    width: 100%;
     cursor: pointer;
     font-size: var(--md);
     font-weight: bold;
+
+}
+
+.signup-button {
+    width: inherit;
+    position: absolute;
     bottom: 0;
 }
 
 .login-button {
     margin-top: 14px;
     margin-bottom: 30px;
+}
+
+.value {
+    color: var(--very-light-pink);
+    font-size: var(--md);
+    margin: 8px 0 32px 0;
 }
