--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -18,3 +18,48 @@
 .account-container {
     height: auto;
 }
+
+.cards-container {
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 20px;
+    justify-content: center;
+}
+
+.desktop-menu {
+    width: 140px;
+    height: auto;
+    border: 1px solid var(--very-light-pink);
+    border-radius: 6px;
+    padding: 20px 20px 0 20px;
+}
+
+.desktop-menu ul {
+    list-style: none;
+}
+
+.desktop-menu ul li {
+    text-align: end;
+}
+
+.desktop-menu ul li:first-child,
+.desktop-menu ul li:nth-child(2) {
+    font-weight: bold;
+}
+
+.desktop-menu ul li:last-child {
+    padding-top: 20px;
+    border-top: 1px solid var(--very-light-pink);
+}
+
+.desktop-menu ul li:last-child a {
+    color: var(--hospital-green);
+    font-size: var(--sm);
+}
+
+.desktop-menu ul li a {
+    color: var(--black);
+    text-decoration: none;
+    margin-bottom: 20px;
+    display: inline-block;
+    font-size: var(--md);
+}
