--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,3 +179,45 @@ html {
     font-size: var(--md);
     margin: 8px 0 32px 0;
 }
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 40%);
+    gap: 20px;
+    place-content: center;
+}
+
+.card {
+    width: 100%;
+}
+
+.card > img {
+    width: 100%;
+    height: 70%;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.card-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4px;
+}
+
+.card-info div p:nth-child(1) {
+    font-size: var(--md);
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.card-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+}
+
+.card-info figure img {
+    width: 40px;
+    height: 40px;
+}
