--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,3 +266,85 @@ margin-bottom: 24px;
     font-size: var(--sm);
     font-weight: 300;
 }
+
+.my-order {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.order {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 30px;
+}
+
+.order-info {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 16px;
+    font-size: var(--sm);
+    align-items: center;
+    background-color: var(--text-input-field);
+    margin-bottom: 24px;
+    border-radius: 8px;
+    padding: 0 24px;
+    height: 64px;
+}
+
+.order-info p:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+}
+
+.order-info p span:nth-child(2) {
+    font-size: var(--sm);
+    color: var(--very-light-pink);
+}
+
+.order-info p:nth-child(2) {
+    text-align: end;
+}
+
+.my-order-container {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    width: 300px;
+    font-size: var(--md);
+    color: var(--black);
+    font-weight: bold;
+}
+
+.my-order-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.cart-item {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 16px;
+    margin-bottom: 24px;
+    align-items: center;
+}
+
+.cart-item figure {
+    margin: 0;
+}
+
+.cart-item figure img {
+    width: 84%;
+    height: auto;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+.cart-item p:nth-child(2) {
+    color: var(--very-light-pink);
+}
+
+.cart-item p:nth-child(3) {
+    font-size: var(--md);
+    font-weight: bold;
+}
