--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,9 +21,8 @@ html {
 }
 
 .login {
-    position: relative;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 100px);
     display: grid;
     place-items: center;
 }
@@ -174,6 +173,11 @@ html {
     margin-bottom: 30px;
 }
 
+.login-button a {
+    color: var(--white);
+    text-decoration: none;
+}
+
 .value {
     color: var(--very-light-pink);
     font-size: var(--md);
@@ -182,7 +186,7 @@ html {
 
 .cards-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 40%);
+    grid-template-columns: repeat(auto-fill, 36%);
     gap: 20px;
     place-content: center;
 }
@@ -348,3 +352,92 @@ margin-bottom: 24px;
     font-size: var(--md);
     font-weight: bold;
 }
+
+.navbar {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: var(--sm);
+    padding: 0 24px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
+.navbar-left {
+    display: flex;
+}
+
+.navbar-left ul,
+.navbar-right ul {
+    align-items: center;
+}
+
+.navbar-shopping-cart {
+    position: relative;
+}
+
+.navbar-shopping-cart .cart-items {
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    background-color: var(--hospital-green);
+    border-radius: 50%;
+    font-weight: bold;
+    top: -6px;
+    right: -3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar-logo {
+    width: 100px;
+}
+
+.navbar-left ul,
+.navbar-right ul {
+    list-style: none;
+    display: flex;
+    height: 60px;
+}
+
+.navbar-left ul li a,
+.navbar-right ul li a {
+    text-decoration: none;
+    color: var(--black);
+    border: 1px solid var(--white);
+}
+
+.navbar-left ul {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    left: 0;
+    padding: 20px;
+    top: 0;
+    gap: 30px;
+    background-color: var(--white);
+    height: 100%;
+    margin: 0;
+    transform: translateX(-150px);
+    transition: transform 0.5s ease;
+    width: 40%;
+}
+
+.navbar-left ul li:first-child {
+    margin-top: 120px;
+}
+
+.menu:hover + .navbar-left ul,
+.menu:active + .navbar-left ul,
+.menu {
+    transform: translateX(0);
+    transition: transform 0.5s ease;
+}
+
+.navbar-email {
+    display: none;
+}
+
