--- a/styles/styles.css
+++ b/styles/styles.css
@@ -431,8 +431,7 @@ margin-bottom: 24px;
 }
 
 .menu:hover + .navbar-left ul,
-.menu:active + .navbar-left ul,
-.menu {
+.menu:active + .navbar-left ul {
     transform: translateX(0);
     transition: transform 0.5s ease;
 }
