cambio del css para acceder al menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -431,7 +431,8 @@ margin-bottom: 24px;
 }
 
 .menu:hover + .navbar-left ul,
-.menu:active + .navbar-left ul {
+.menu:active + .navbar-left ul
+.menu {
     transform: translateX(0);
     transition: transform 0.5s ease;
 }
