--- a/styles/styles.css
+++ b/styles/styles.css
@@ -432,7 +432,7 @@ margin-bottom: 24px;
 
 .menu:hover + .navbar-left ul,
 .menu:active + .navbar-left ul,
-.menu:focus-within + .navbar-left ul {
+.navbar-left ul:focus-within {
     transform: translateX(0);
     transition: transform 0.5s ease;
 }
