--- a/styles/styles.css
+++ b/styles/styles.css
@@ -421,7 +421,7 @@ margin-bottom: 24px;
     background-color: var(--white);
     height: 100%;
     margin: 0;
-    transform: translateX(-150px);
+    transform: translateX(-200px);
     transition: transform 0.5s ease;
     width: 40%;
 }
@@ -432,7 +432,7 @@ margin-bottom: 24px;
 
 .menu:hover + .navbar-left ul,
 .menu:active + .navbar-left ul,
-.navbar-left ul:focus-within {
+.menu:visited + .navbar-left ul {
     transform: translateX(0);
     transition: transform 0.5s ease;
 }
