--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -115,6 +115,7 @@
     display: flex;
     flex-direction: row;
     transform: translateX(0);
+    align-items: center;
 }
 
 .navbar-email {
@@ -125,6 +126,9 @@
     margin-left: 12px;
 }
 
+.navbar-left ul li:first-child {
+    margin-top: 0;
+}
 
 .navbar-left ul li a,
 .navbar-right ul li a {
@@ -134,7 +138,7 @@
 
 .navbar-left ul li a:hover,
 .navbar-right ul li a:hover {
-    border: 1px solid var(--hospital-green);
+    border: 3px solid var(--hospital-green);
 }
 
 .navbar-right {
@@ -143,4 +147,8 @@
 
 .navbar-email {
     margin-right: 12px;
+}
+
+.mobile-menu {
+    display: none;
 }
