--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,3 +472,86 @@ margin-bottom: 24px;
     padding-left: 30px;
     padding-right: 30px;
 }
+
+.product-detail {
+    font-size: var(--md);
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.product-detail-close {
+    position: absolute;
+    border-radius: 50%;
+    background-color: var(--text-input-field);
+    z-index: 2;
+    width: 14px;
+    height: 14px;
+    padding: 12px;
+    top: -12px;
+    right: 76px;
+}
+
+.product-detail-close img:first-child {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+}
+
+.product-detail img:nth-child(2) {
+    width: 60%;
+    object-fit: cover;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
+
+
+.product-detail-close:hover,
+.product-detail-close:active {
+    cursor: pointer;
+    background-color: tomato;
+}
+
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-to-cart-button span {
+    background-image: url('../icons/bt_add_to_cart.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 36px;
+    width: 36px;
+    margin-right: 10px;
+}
+
+.add-to-cart-button a{
+    color: var(--white);
+    text-decoration: none;
+}
+
+.product-info {
+    margin: 0 24px;
+    line-height: 28px;
+}
+
+.product-info p:nth-child(1) {
+    font-weight: bold;
+}
+
+.product-info p:nth-child(2) {
+    font-weight: bold;
+}
+
+.product-info p:nth-child(3) {
+    font-size: var(--sm);
+    color: var(--very-light-pink);
+    margin-bottom: 10px;
+}
